// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox onBlur and onFocus: with blur 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 32px;
  height: 32px;
  margin-right: 12px;
  cursor: pointer;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-0:hover .nk-checkbox-ripple {
  opacity: 1;
}

.emotion-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 0;
  background-color: #E0E7FF;
  border-radius: 4px;
  width: 48px;
  height: 48px;
  -webkit-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -moz-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -ms-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border-color: #CCCCCC;
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-2 svg {
  fill: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  border-color: #3358CC;
}

.emotion-2:focus:not(:disabled) {
  border-color: #3358CC;
}

.emotion-2:checked:hover:not(:disabled) {
  background-color: #2B4AAB;
  border-color: #2B4AAB;
}

.emotion-2:checked:focus:not(:disabled) {
  background-color: #3358CC;
  border-color: #2B4AAB;
}

.emotion-2:invalid:hover:not(:disabled) {
  border-color: #D20600;
}

.emotion-2:checked:invalid:not(:disabled) {
  background-color: #D20600;
  border-color: #D20600;
}

.emotion-2:checked:invalid:focus:not(:disabled) {
  background-color: #D20600;
  border-color: #2B4AAB;
}

.emotion-2:valid:hover:not(:disabled) {
  border-color: #0A782A;
}

.emotion-2:checked:valid:not(:disabled) {
  background-color: #0A782A;
  border-color: #0A782A;
}

.emotion-2:checked:valid:focus:not(:disabled) {
  background-color: #0A782A;
  border-color: #2B4AAB;
}

.emotion-2:disabled {
  border-color: #F4F4F4;
}

.emotion-2:checked:disabled:not(:disabled) {
  background-color: #F4F4F4;
  border-color: #F4F4F4;
}

.emotion-2:checked:disabled:not(:disabled) svg {
  fill: #C0C0C0;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: pointer;
}

<div
    class="emotion-0"
  >
    <div
      class="nk-checkbox-ripple emotion-1"
    />
    <div
      class="emotion-2"
    >
      <input
        class="emotion-3"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox onBlur and onFocus: with focus 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 32px;
  height: 32px;
  margin-right: 12px;
  cursor: pointer;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-0:hover .nk-checkbox-ripple {
  opacity: 1;
}

.emotion-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 0;
  background-color: #E0E7FF;
  border-radius: 4px;
  width: 48px;
  height: 48px;
  -webkit-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -moz-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -ms-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border-color: #3358CC;
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-2 svg {
  fill: #FFFFFF;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: pointer;
}

<div
    class="emotion-0"
  >
    <div
      class="nk-checkbox-ripple emotion-1"
    />
    <div
      class="emotion-2"
    >
      <input
        class="emotion-3"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox render with size: large & checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  margin-right: 16px;
  cursor: pointer;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-0:hover .nk-checkbox-ripple {
  opacity: 1;
}

.emotion-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 0;
  background-color: #E0E7FF;
  border-radius: 4px;
  width: 64px;
  height: 64px;
  -webkit-transform: translate3d(calc(64px / -2), calc(64px / -2), 0);
  -moz-transform: translate3d(calc(64px / -2), calc(64px / -2), 0);
  -ms-transform: translate3d(calc(64px / -2), calc(64px / -2), 0);
  transform: translate3d(calc(64px / -2), calc(64px / -2), 0);
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3358CC;
  border-color: #3358CC;
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-2 svg {
  fill: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  background-color: #2B4AAB;
  border-color: #2B4AAB;
}

.emotion-2:focus:not(:disabled) {
  background-color: #3358CC;
  border-color: #2B4AAB;
}

.emotion-2:invalid:not(:disabled) {
  background-color: #D20600;
  border-color: #D20600;
}

.emotion-2:valid:not(:disabled) {
  background-color: #0A782A;
  border-color: #0A782A;
}

.emotion-2:disabled {
  background-color: #F4F4F4;
  border-color: #F4F4F4;
}

.emotion-2:disabled svg {
  fill: #C0C0C0;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: pointer;
}

<div
    class="emotion-0"
  >
    <div
      class="nk-checkbox-ripple emotion-1"
    />
    <div
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3 emotion-4"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <input
        checked=""
        class="emotion-5"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox render with size: large 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  margin-right: 16px;
  cursor: pointer;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-0:hover .nk-checkbox-ripple {
  opacity: 1;
}

.emotion-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 0;
  background-color: #E0E7FF;
  border-radius: 4px;
  width: 64px;
  height: 64px;
  -webkit-transform: translate3d(calc(64px / -2), calc(64px / -2), 0);
  -moz-transform: translate3d(calc(64px / -2), calc(64px / -2), 0);
  -ms-transform: translate3d(calc(64px / -2), calc(64px / -2), 0);
  transform: translate3d(calc(64px / -2), calc(64px / -2), 0);
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border-color: #CCCCCC;
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-2 svg {
  fill: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  border-color: #3358CC;
}

.emotion-2:focus:not(:disabled) {
  border-color: #3358CC;
}

.emotion-2:checked:hover:not(:disabled) {
  background-color: #2B4AAB;
  border-color: #2B4AAB;
}

.emotion-2:checked:focus:not(:disabled) {
  background-color: #3358CC;
  border-color: #2B4AAB;
}

.emotion-2:invalid:hover:not(:disabled) {
  border-color: #D20600;
}

.emotion-2:checked:invalid:not(:disabled) {
  background-color: #D20600;
  border-color: #D20600;
}

.emotion-2:checked:invalid:focus:not(:disabled) {
  background-color: #D20600;
  border-color: #2B4AAB;
}

.emotion-2:valid:hover:not(:disabled) {
  border-color: #0A782A;
}

.emotion-2:checked:valid:not(:disabled) {
  background-color: #0A782A;
  border-color: #0A782A;
}

.emotion-2:checked:valid:focus:not(:disabled) {
  background-color: #0A782A;
  border-color: #2B4AAB;
}

.emotion-2:disabled {
  border-color: #F4F4F4;
}

.emotion-2:checked:disabled:not(:disabled) {
  background-color: #F4F4F4;
  border-color: #F4F4F4;
}

.emotion-2:checked:disabled:not(:disabled) svg {
  fill: #C0C0C0;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: pointer;
}

<div
    class="emotion-0"
  >
    <div
      class="nk-checkbox-ripple emotion-1"
    />
    <div
      class="emotion-2"
    >
      <input
        class="emotion-3"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox render with size: medium & checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 32px;
  height: 32px;
  margin-right: 12px;
  cursor: pointer;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-0:hover .nk-checkbox-ripple {
  opacity: 1;
}

.emotion-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 0;
  background-color: #E0E7FF;
  border-radius: 4px;
  width: 48px;
  height: 48px;
  -webkit-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -moz-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -ms-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3358CC;
  border-color: #3358CC;
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-2 svg {
  fill: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  background-color: #2B4AAB;
  border-color: #2B4AAB;
}

.emotion-2:focus:not(:disabled) {
  background-color: #3358CC;
  border-color: #2B4AAB;
}

.emotion-2:invalid:not(:disabled) {
  background-color: #D20600;
  border-color: #D20600;
}

.emotion-2:valid:not(:disabled) {
  background-color: #0A782A;
  border-color: #0A782A;
}

.emotion-2:disabled {
  background-color: #F4F4F4;
  border-color: #F4F4F4;
}

.emotion-2:disabled svg {
  fill: #C0C0C0;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: pointer;
}

<div
    class="emotion-0"
  >
    <div
      class="nk-checkbox-ripple emotion-1"
    />
    <div
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3 emotion-4"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <input
        checked=""
        class="emotion-5"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox render with size: medium 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 32px;
  height: 32px;
  margin-right: 12px;
  cursor: pointer;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-0:hover .nk-checkbox-ripple {
  opacity: 1;
}

.emotion-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 0;
  background-color: #E0E7FF;
  border-radius: 4px;
  width: 48px;
  height: 48px;
  -webkit-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -moz-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -ms-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border-color: #CCCCCC;
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-2 svg {
  fill: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  border-color: #3358CC;
}

.emotion-2:focus:not(:disabled) {
  border-color: #3358CC;
}

.emotion-2:checked:hover:not(:disabled) {
  background-color: #2B4AAB;
  border-color: #2B4AAB;
}

.emotion-2:checked:focus:not(:disabled) {
  background-color: #3358CC;
  border-color: #2B4AAB;
}

.emotion-2:invalid:hover:not(:disabled) {
  border-color: #D20600;
}

.emotion-2:checked:invalid:not(:disabled) {
  background-color: #D20600;
  border-color: #D20600;
}

.emotion-2:checked:invalid:focus:not(:disabled) {
  background-color: #D20600;
  border-color: #2B4AAB;
}

.emotion-2:valid:hover:not(:disabled) {
  border-color: #0A782A;
}

.emotion-2:checked:valid:not(:disabled) {
  background-color: #0A782A;
  border-color: #0A782A;
}

.emotion-2:checked:valid:focus:not(:disabled) {
  background-color: #0A782A;
  border-color: #2B4AAB;
}

.emotion-2:disabled {
  border-color: #F4F4F4;
}

.emotion-2:checked:disabled:not(:disabled) {
  background-color: #F4F4F4;
  border-color: #F4F4F4;
}

.emotion-2:checked:disabled:not(:disabled) svg {
  fill: #C0C0C0;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: pointer;
}

<div
    class="emotion-0"
  >
    <div
      class="nk-checkbox-ripple emotion-1"
    />
    <div
      class="emotion-2"
    >
      <input
        class="emotion-3"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox render with size: small & checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 12px;
  cursor: pointer;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-0:hover .nk-checkbox-ripple {
  opacity: 1;
}

.emotion-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 0;
  background-color: #E0E7FF;
  border-radius: 4px;
  width: 40px;
  height: 40px;
  -webkit-transform: translate3d(calc(40px / -2), calc(40px / -2), 0);
  -moz-transform: translate3d(calc(40px / -2), calc(40px / -2), 0);
  -ms-transform: translate3d(calc(40px / -2), calc(40px / -2), 0);
  transform: translate3d(calc(40px / -2), calc(40px / -2), 0);
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3358CC;
  border-color: #3358CC;
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-2 svg {
  fill: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  background-color: #2B4AAB;
  border-color: #2B4AAB;
}

.emotion-2:focus:not(:disabled) {
  background-color: #3358CC;
  border-color: #2B4AAB;
}

.emotion-2:invalid:not(:disabled) {
  background-color: #D20600;
  border-color: #D20600;
}

.emotion-2:valid:not(:disabled) {
  background-color: #0A782A;
  border-color: #0A782A;
}

.emotion-2:disabled {
  background-color: #F4F4F4;
  border-color: #F4F4F4;
}

.emotion-2:disabled svg {
  fill: #C0C0C0;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: pointer;
}

<div
    class="emotion-0"
  >
    <div
      class="nk-checkbox-ripple emotion-1"
    />
    <div
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3 emotion-4"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <input
        checked=""
        class="emotion-5"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox render with size: small 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 12px;
  cursor: pointer;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-0:hover .nk-checkbox-ripple {
  opacity: 1;
}

.emotion-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 0;
  background-color: #E0E7FF;
  border-radius: 4px;
  width: 40px;
  height: 40px;
  -webkit-transform: translate3d(calc(40px / -2), calc(40px / -2), 0);
  -moz-transform: translate3d(calc(40px / -2), calc(40px / -2), 0);
  -ms-transform: translate3d(calc(40px / -2), calc(40px / -2), 0);
  transform: translate3d(calc(40px / -2), calc(40px / -2), 0);
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border-color: #CCCCCC;
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-2 svg {
  fill: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  border-color: #3358CC;
}

.emotion-2:focus:not(:disabled) {
  border-color: #3358CC;
}

.emotion-2:checked:hover:not(:disabled) {
  background-color: #2B4AAB;
  border-color: #2B4AAB;
}

.emotion-2:checked:focus:not(:disabled) {
  background-color: #3358CC;
  border-color: #2B4AAB;
}

.emotion-2:invalid:hover:not(:disabled) {
  border-color: #D20600;
}

.emotion-2:checked:invalid:not(:disabled) {
  background-color: #D20600;
  border-color: #D20600;
}

.emotion-2:checked:invalid:focus:not(:disabled) {
  background-color: #D20600;
  border-color: #2B4AAB;
}

.emotion-2:valid:hover:not(:disabled) {
  border-color: #0A782A;
}

.emotion-2:checked:valid:not(:disabled) {
  background-color: #0A782A;
  border-color: #0A782A;
}

.emotion-2:checked:valid:focus:not(:disabled) {
  background-color: #0A782A;
  border-color: #2B4AAB;
}

.emotion-2:disabled {
  border-color: #F4F4F4;
}

.emotion-2:checked:disabled:not(:disabled) {
  background-color: #F4F4F4;
  border-color: #F4F4F4;
}

.emotion-2:checked:disabled:not(:disabled) svg {
  fill: #C0C0C0;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: pointer;
}

<div
    class="emotion-0"
  >
    <div
      class="nk-checkbox-ripple emotion-1"
    />
    <div
      class="emotion-2"
    >
      <input
        class="emotion-3"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox render with state: checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 32px;
  height: 32px;
  margin-right: 12px;
  cursor: pointer;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-0:hover .nk-checkbox-ripple {
  opacity: 1;
}

.emotion-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 0;
  background-color: #E0E7FF;
  border-radius: 4px;
  width: 48px;
  height: 48px;
  -webkit-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -moz-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -ms-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3358CC;
  border-color: #3358CC;
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-2 svg {
  fill: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  background-color: #2B4AAB;
  border-color: #2B4AAB;
}

.emotion-2:focus:not(:disabled) {
  background-color: #3358CC;
  border-color: #2B4AAB;
}

.emotion-2:invalid:not(:disabled) {
  background-color: #D20600;
  border-color: #D20600;
}

.emotion-2:valid:not(:disabled) {
  background-color: #0A782A;
  border-color: #0A782A;
}

.emotion-2:disabled {
  background-color: #F4F4F4;
  border-color: #F4F4F4;
}

.emotion-2:disabled svg {
  fill: #C0C0C0;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: pointer;
}

<div
    class="emotion-0"
  >
    <div
      class="nk-checkbox-ripple emotion-1"
    />
    <div
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3 emotion-4"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <input
        checked=""
        class="emotion-5"
        id="checked"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox render with state: checked-disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 32px;
  height: 32px;
  margin-right: 12px;
  cursor: not-allowed;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 0;
  background-color: #E0E7FF;
  border-radius: 4px;
  width: 48px;
  height: 48px;
  -webkit-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -moz-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -ms-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F4F4F4;
  border-color: #F4F4F4;
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-2 svg {
  fill: #C0C0C0;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: not-allowed;
}

<div
    class="emotion-0"
  >
    <div
      class="nk-checkbox-ripple emotion-1"
    />
    <div
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3 emotion-4"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <input
        checked=""
        class="emotion-5"
        disabled=""
        id="checked-disabled"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox render with state: default 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 32px;
  height: 32px;
  margin-right: 12px;
  cursor: pointer;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-0:hover .nk-checkbox-ripple {
  opacity: 1;
}

.emotion-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 0;
  background-color: #E0E7FF;
  border-radius: 4px;
  width: 48px;
  height: 48px;
  -webkit-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -moz-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -ms-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border-color: #CCCCCC;
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-2 svg {
  fill: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  border-color: #3358CC;
}

.emotion-2:focus:not(:disabled) {
  border-color: #3358CC;
}

.emotion-2:checked:hover:not(:disabled) {
  background-color: #2B4AAB;
  border-color: #2B4AAB;
}

.emotion-2:checked:focus:not(:disabled) {
  background-color: #3358CC;
  border-color: #2B4AAB;
}

.emotion-2:invalid:hover:not(:disabled) {
  border-color: #D20600;
}

.emotion-2:checked:invalid:not(:disabled) {
  background-color: #D20600;
  border-color: #D20600;
}

.emotion-2:checked:invalid:focus:not(:disabled) {
  background-color: #D20600;
  border-color: #2B4AAB;
}

.emotion-2:valid:hover:not(:disabled) {
  border-color: #0A782A;
}

.emotion-2:checked:valid:not(:disabled) {
  background-color: #0A782A;
  border-color: #0A782A;
}

.emotion-2:checked:valid:focus:not(:disabled) {
  background-color: #0A782A;
  border-color: #2B4AAB;
}

.emotion-2:disabled {
  border-color: #F4F4F4;
}

.emotion-2:checked:disabled:not(:disabled) {
  background-color: #F4F4F4;
  border-color: #F4F4F4;
}

.emotion-2:checked:disabled:not(:disabled) svg {
  fill: #C0C0C0;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: pointer;
}

<div
    class="emotion-0"
  >
    <div
      class="nk-checkbox-ripple emotion-1"
    />
    <div
      class="emotion-2"
    >
      <input
        class="emotion-3"
        id="default"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox render with state: disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 32px;
  height: 32px;
  margin-right: 12px;
  cursor: not-allowed;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 0;
  background-color: #E0E7FF;
  border-radius: 4px;
  width: 48px;
  height: 48px;
  -webkit-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -moz-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -ms-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border-color: #F4F4F4;
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-2 svg {
  fill: #FFFFFF;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: not-allowed;
}

<div
    class="emotion-0"
  >
    <div
      class="nk-checkbox-ripple emotion-1"
    />
    <div
      class="emotion-2"
    >
      <input
        class="emotion-3"
        disabled=""
        id="disabled"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox render with state: invalid 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 32px;
  height: 32px;
  margin-right: 12px;
  cursor: pointer;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-0:hover .nk-checkbox-ripple {
  opacity: 1;
}

.emotion-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 0;
  background-color: #E0E7FF;
  border-radius: 4px;
  width: 48px;
  height: 48px;
  -webkit-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -moz-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -ms-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border-color: #D20600;
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-2 svg {
  fill: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  border-color: #D20600;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: pointer;
}

<div
    class="emotion-0"
  >
    <div
      class="nk-checkbox-ripple emotion-1"
    />
    <div
      class="emotion-2"
    >
      <input
        class="emotion-3"
        id="invalid"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox render with state: invalid-checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 32px;
  height: 32px;
  margin-right: 12px;
  cursor: pointer;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-0:hover .nk-checkbox-ripple {
  opacity: 1;
}

.emotion-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 0;
  background-color: #E0E7FF;
  border-radius: 4px;
  width: 48px;
  height: 48px;
  -webkit-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -moz-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -ms-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #D20600;
  border-color: #D20600;
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-2 svg {
  fill: #FFFFFF;
}

.emotion-2:focus:not(:disabled) {
  background-color: #D20600;
  border-color: #2B4AAB;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: pointer;
}

<div
    class="emotion-0"
  >
    <div
      class="nk-checkbox-ripple emotion-1"
    />
    <div
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3 emotion-4"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <input
        checked=""
        class="emotion-5"
        id="invalid-checked"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox render with state: valid 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 32px;
  height: 32px;
  margin-right: 12px;
  cursor: pointer;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-0:hover .nk-checkbox-ripple {
  opacity: 1;
}

.emotion-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 0;
  background-color: #E0E7FF;
  border-radius: 4px;
  width: 48px;
  height: 48px;
  -webkit-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -moz-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -ms-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border-color: #0A782A;
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-2 svg {
  fill: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  border-color: #0A782A;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: pointer;
}

<div
    class="emotion-0"
  >
    <div
      class="nk-checkbox-ripple emotion-1"
    />
    <div
      class="emotion-2"
    >
      <input
        class="emotion-3"
        id="valid"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox render with state: valid-checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 32px;
  height: 32px;
  margin-right: 12px;
  cursor: pointer;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-0:hover .nk-checkbox-ripple {
  opacity: 1;
}

.emotion-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 0;
  background-color: #E0E7FF;
  border-radius: 4px;
  width: 48px;
  height: 48px;
  -webkit-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -moz-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -ms-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #0A782A;
  border-color: #0A782A;
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-2 svg {
  fill: #FFFFFF;
}

.emotion-2:focus:not(:disabled) {
  background-color: #0A782A;
  border-color: #2B4AAB;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

.emotion-3.emotion-3 {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: pointer;
}

<div
    class="emotion-0"
  >
    <div
      class="nk-checkbox-ripple emotion-1"
    />
    <div
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3 emotion-4"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <input
        checked=""
        class="emotion-5"
        id="valid-checked"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 32px;
  height: 32px;
  margin-right: 12px;
  cursor: pointer;
}

.emotion-0 * {
  box-sizing: border-box;
}

.emotion-0:hover .nk-checkbox-ripple {
  opacity: 1;
}

.emotion-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 0;
  background-color: #E0E7FF;
  border-radius: 4px;
  width: 48px;
  height: 48px;
  -webkit-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -moz-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  -ms-transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
  transform: translate3d(calc(48px / -2), calc(48px / -2), 0);
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3358CC;
  border-color: #3358CC;
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
}

.emotion-2 svg {
  fill: #FFFFFF;
}

.emotion-2:hover:not(:disabled) {
  background-color: #2B4AAB;
  border-color: #2B4AAB;
}

.emotion-2:focus:not(:disabled) {
  background-color: #3358CC;
  border-color: #2B4AAB;
}

.emotion-2:invalid:not(:disabled) {
  background-color: #D20600;
  border-color: #D20600;
}

.emotion-2:valid:not(:disabled) {
  background-color: #0A782A;
  border-color: #0A782A;
}

.emotion-2:disabled {
  background-color: #F4F4F4;
  border-color: #F4F4F4;
}

.emotion-2:disabled svg {
  fill: #C0C0C0;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  background-color: #05717D;
  fill: #FFFFFF;
  vertical-align: unset;
  display: inline-block;
}

.emotion-3.emotion-3 {
  width: 32px;
  height: 32px;
  background-color: #05717D;
  fill: #FFFFFF;
}

.emotion-5 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  opacity: 0;
  cursor: pointer;
}

<div
    class="emotion-0"
  >
    <div
      class="nk-checkbox-ripple emotion-1"
    />
    <div
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3 emotion-4"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <input
        checked=""
        class="emotion-5"
        type="checkbox"
      />
    </div>
  </div>
</DocumentFragment>
`;
